--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "dev": "gatsby develop",
     "build": "gatsby build",
-    "deploy": "npm run build && gh-pages -d public",
+    "deploy": "npm run build && npm run cname && surge ./public",
     "test": "jest --config jest.config.js --no-cache",
     "test:watch": "jest --config jest.config.js --no-cache --watch",
     "prettify": "prettier --write '{./,__{tests,mocks}__}/**/*.+(js|jsx)'",
-    "cname": "echo somethingdifferenttours.com > ./public/static/CNAME"
+    "cname": "echo somethingdifferenttours.com > ./public/CNAME"
   },
   "dependencies": {
     "@rebass/grid": "^6.0.0-4",
@@ -38,6 +38,7 @@
     "react-helmet": "^5.2.0",
     "react-image-lightbox": "^5.0.0",
     "react-typography": "^0.16.13",
+    "slugify": "^1.3.3",
     "styled-components": "^4.1.1",
     "typography": "^0.16.17"
   },
