--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "deploy": "npm run build && npm run cname && surge ./public",
     "test": "jest --config jest.config.js --no-cache",
     "test:watch": "jest --config jest.config.js --no-cache --watch",
-    "prettify": "prettier --write '{./,__{tests,mocks}__}/**/*.+(js|jsx)'",
+    "prettify": "prettier --write '{./src/,__{tests,mocks}__}/**/*.+(js|jsx)'",
     "cname": "echo somethingdifferenttours.com > ./public/CNAME"
   },
   "dependencies": {
