--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "import/prefer-default-export": 1,
     "import/no-extraneous-dependencies": "off",
     "react/jsx-filename-extension": "off",
-    "react/jsx-one-expression-per-line": 1,
+    "react/jsx-one-expression-per-line": "off",
     "react/no-array-index-key": "off",
     "react/forbid-prop-types": 1,
     "react/destructuring-assignment": 1,
