build: update dependencies

--- a/package.json
+++ b/package.json
@@ -14,49 +14,50 @@
     "cname": "echo somethingdifferenttours.com > ./public/CNAME"
   },
   "dependencies": {
-    "@rebass/grid": "^6.0.0-4",
-    "feather-icons": "^4.9.0",
-    "gatsby": "^2.0.0",
-    "gatsby-image": "^2.0.20",
-    "gatsby-plugin-google-analytics": "^2.0.7",
+    "@rebass/grid": "^6.1.0",
+    "@styled-system/theme-get": "^5.1.2",
+    "feather-icons": "^4.25.0",
+    "gatsby": "^2.19.12",
+    "gatsby-image": "^2.2.40",
+    "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-offline": "^2.0.15",
-    "gatsby-plugin-react-helmet": "^3.0.2",
+    "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-resolve-src": "^2.0.0-beta.1",
-    "gatsby-plugin-sharp": "^2.0.12",
-    "gatsby-plugin-styled-components": "^3.0.2",
-    "gatsby-plugin-typography": "^2.2.1",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-json": "^2.1.5",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "intersection-observer": "^0.5.1",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-plugin-typography": "^2.3.22",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-json": "^2.2.26",
+    "gatsby-transformer-sharp": "^2.3.14",
+    "intersection-observer": "^0.7.0",
     "object-fit-images": "^3.2.4",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.0",
-    "react-dom": "^16.6.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-headroom": "2.2.2",
-    "react-helmet": "^5.2.0",
-    "react-image-lightbox": "^5.0.0",
-    "react-typography": "^0.16.13",
-    "slugify": "^1.3.3",
+    "react-helmet": "^5.2.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-typography": "^0.16.19",
+    "slugify": "^1.3.6",
     "styled-components": "^4.1.1",
-    "typography": "^0.16.17"
+    "typography": "^0.16.19"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-plugin-styled-components": "^1.8.0",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.2",
-    "enzyme-to-json": "^3.1.4",
+    "babel-eslint": "^10.0.3",
+    "babel-plugin-styled-components": "^1.10.7",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "enzyme-to-json": "^3.4.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.4.0",
-    "gh-pages": "^2.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "gh-pages": "^2.2.0",
     "jest": "^23.6.0",
-    "prettier": "^1.12.1"
+    "prettier": "^1.19.1"
   }
 }
